syntax = "proto3";
package autheo.autheo;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "autheo/autheo/params.proto";

option go_package = "autheo/x/autheo/types";

// GenesisState defines the autheo module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
